--- a/IdleRpgActionWinForm/IdleRpgActionWinForm.csproj
+++ b/IdleRpgActionWinForm/IdleRpgActionWinForm.csproj
@@ -20,6 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Buttons\ActionButtonWithDropdownChoice.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="RandomTexts.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
