--- a/IdleRpgActionWinForm/IdleRpgActionWinForm.csproj
+++ b/IdleRpgActionWinForm/IdleRpgActionWinForm.csproj
@@ -25,18 +25,10 @@
     <Compile Update="Buttons\ActionButtonWithReminder.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Update="Buttons\ActionButtonWithOneChoiceAndDropdownChoiceAndOneChoice .cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Update="Buttons\ActionButtonWithDropdownChoiceAndOneChoice.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Update="Buttons\ActionButtonWithDropdownChoice.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Update="Buttons\ActionButtonWithTwoChoicesAndText.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Update="Buttons\ActionButtonWithOneChoiceAndDropdownChoiceAndOneChoice .cs" />
+    <Compile Update="Buttons\ActionButtonWithDropdownChoiceAndOneChoice.cs" />
+    <Compile Update="Buttons\ActionButtonWithDropdownChoice.cs" />
+    <Compile Update="Buttons\ActionButtonWithTwoChoicesAndText.cs" />
   </ItemGroup>
 
   <ItemGroup>
